1. background 2. background overlay 3. form 4. style

--- a/Build a Survey Form/index.html
+++ b/Build a Survey Form/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Survey Form</title>
+    <title>FreeCodeCamp Survey Form</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -16,15 +16,24 @@
 </head>
 
 <body>
-    <h1 id="title">freeCodeCamp Survey Form</h1>
     <main id='main'>
-
+        <h1 id="title">FreeCodeCamp Survey Form</h1>
+        <p id="description"><i>Thank you for taking the time to help us improve the platform</i></p>
+        <form id="survey-form">
+            <label for="name">Your Name:</label><br>
+            <input id="name"><br>
+            <label for="email">Your Email:</label><br>
+            <input id="email"><br>
+            <label for="number">Your Number:</label><br>
+            <input id="number"><br>
+        </form>
+        <footer>
+            <p>
+                © Copyright <strong>Xuyang Han</strong>. All Rights Reserved
+            </p>
+        </footer>
     </main>
-    <footer>
-        <p>
-            © Copyright <strong>Xuyang Han</strong>. All Rights Reserved
-        </p>
-    </footer>
+
 </body>
 
 </html>
