--- a/Build a Product Landing Page/index.html
+++ b/Build a Product Landing Page/index.html
@@ -14,21 +14,18 @@
 
 <body>
     <header id="header">
-        <nav id="nav-bar" class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <img id="header-img" src="https://clipground.com/images/html-logo-png-1.jpg" width="50px">
+        <nav id="nav-bar" class="navbar navbar-expand-lg navbar-dark">
+            <img id="header-img" src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2F4.bp.blogspot.com%2F-9sHkyGUf6fU%2FUCmrmIZQ45I%2FAAAAAAAABJk%2FWXGieaHpyhg%2Fs1600%2FToyota-Logo%2B(1).jpg&f=1&nofb=1" width="50px">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto my-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#header">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#features">Features</a>
+                        <a class="nav-link" href="#models">Models</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#demo">Demo</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#pricing">Pricing</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact Us</a>
@@ -36,22 +33,76 @@
                 </ul>
             </div>
         </nav>
+        <div id="landing" class="p-5 text-center bg-image">
+            <div class="d-flex justify-content-center align-items-center h-100">
+                <div class="text-white">
+                    <h1 id="landing-title">Toyota Canada</h1>
+                    <h4 class="mb-3">Summer Starts Here!</h4>
+                    <a class="btn btn-outline-light btn-lg" href="#models" role="button">View Models</a>
+                </div>
+            </div>
+        </div>
     </header>
 
     <main>
-        <section id='features'>
-            features
-            <video id="video"></video>
+        <section id='models'>
+            <div class="section-title">
+                <h2>Models</h2>
+            </div>
+            <div class="cards row">
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+                    <div class="card">
+                        <img class="card-img-top" src="https://s3.amazonaws.com/toyota.site.toyota-v5/tci-prod/toyota/media/common/vehicles/thumbnails/cor.png?ck=05312021091208" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Corolla</h5>
+                            <p class="card-text">The 2021 Corolla is here. Choose from the refined L, the sporty SE, the dynamic Corolla hybrid, or the head-turning Nightshade Edition. Fun. Smart. Value-packed. Get more out of life behind the wheel of a Corolla.</p>
+                            <p><strong>FROM $19,350*</strong></p>
+                            <a href="https://www.toyota.ca/toyota/en/vehicles/corolla/overview" class="btn btn-primary">Explore</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+                    <div class="card">
+                        <img class="card-img-top" src="https://s3.amazonaws.com/toyota.site.toyota-v5/tci-prod/toyota/media/common/vehicles/thumbnails/cam.png?ck=05312021091208" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Camry</h5>
+                            <p class="card-text">The 2021 Camry has it all. More athletic styling. Higher levels of innovative technology, including Toyota Safety Sense 2.5+, our most advanced suite of advanced safety systems yet. And more models to choose from, including
+                                Camry AWD, and the first-ever Camry Hybrid XSE. Life is just better behind the wheel of a Camry.</p>
+                            <p><strong>FROM $27,250*</strong></p>
+                            <a href="https://www.toyota.ca/toyota/en/vehicles/camry/overview" class="btn btn-primary">Explore</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+                    <div class="card">
+                        <img class="card-img-top" src="https://s3.amazonaws.com/toyota.site.toyota-v5/tci-prod/toyota/media/common/vehicles/thumbnails/rap.png?ck=05312021091208" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">RAV4 Prime</h5>
+                            <p class="card-text">Sporty, versatile, and connected. Get into our most powerful RAV4 yet, with 302 net horsepower, cutting-edge technology, and a whole lot more. Best of all, you can choose to plug it in, gas it up, or both. With a full tank
+                                and a full electric charge, RAV4 Prime delivers a total combined driving range of up to 979 kilometres*. Available in two unique models.</p>
+                            <p><strong>From $44,990*</strong></p>
+                            <a href="https://www.toyota.ca/toyota/en/vehicles/rav4-prime/overview" class="btn btn-primary">Explore</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
-        <section id='demo'>demo
+        <section id='demo'>
+            <div class="section-title">
+                <h2>Video</h2>
+            </div>
+            <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/MTsiLSCqyEA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
-        <section id='pricing'>pricing
-        </section>
-        <section id='contact'>contact
+        <section id='contact'>
+            <div class="section-title">
+                <h2>Contact Us</h2>
+            </div>
             <form id="form" action="https://www.freecodecamp.com/email-submit">
-                <label for="email" id="email-label">Your Email:</label><br>
-                <input type="email" id="email" class="text-input" placeholder="Please Enter Your Email" required><br>
-                <button type="submit" id="submit" class="submit-button"> Submit </button>
+                <div class="form-group">
+                    <label for="email" id="email-label">Your Email:</label><br>
+                    <input type="email" id="email" name="email" class="text-input form-control" placeholder="Please Enter Your Email" required>
+                </div>
+                <button type="submit" id="submit" name="submit" class="submit-button btn btn-primary"> Get Contacted </button>
             </form>
         </section>
     </main>
