--- a/Build a Technical Documentation Page/index.html
+++ b/Build a Technical Documentation Page/index.html
@@ -13,7 +13,72 @@
 </head>
 
 <body>
+    <div class="row align-items-start" id="app">
+        <nav id="navbar" class="col-3">
+            <header>Bootstrap Starter Template</header>
+            <ul class="list-group">
+                <a href="#quick-start" class="nav-link list-group-item list-group-item-action list-group-item-dark">Bootstrap Quick start</a>
+                <a href="#css" class="nav-link list-group-item list-group-item-action list-group-item-dark">CSS</a>
+                <a href="#js" class="nav-link list-group-item list-group-item-action list-group-item-dark">JS</a>
+                <a href="#template" class="nav-link list-group-item list-group-item-action list-group-item-dark">A Starter Template</a>
+                <a href="#community" class="nav-link list-group-item list-group-item-action list-group-item-dark">Community</a>
+            </ul>
 
+        </nav>
+        <main id="main-doc" class="col-9">
+            <section class="main-section" id="quick-start">
+                <header>
+                    Bootstrap Quick start
+                </header>
+                <p>Get started with Bootstrap, the world’s most popular framework for building responsive, mobile-first sites, with a template starter page.</p>
+            </section>
+            <hr class="hr3">
+            <section class="main-section" id="css">
+                <header>
+                    CSS
+                </header>
+                <p>Copy-paste the stylesheet <code>&lt;link&gt;</code> into your <code>&lt;head&gt;</code> before all other stylesheets to load our CSS.</p>
+                <code>
+                    &lt;link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous"&gt;
+                </code>
+            </section>
+            <hr class="hr3">
+            <section class="main-section" id="js">
+                <header>
+                    JS
+                </header>
+                <p>
+                    Include every Bootstrap JavaScript plugin and dependency with one of our two bundles. Both <code>bootstrap.bundle.js</code> and <code>bootstrap.bundle.min.js</code>. For more information about what’s included in Bootstrap, please see
+                    our contents section.
+                </p>
+            </section>
+            <hr class="hr3">
+            <section class="main-section" id="template">
+                <header>
+                    A Starter Template
+                </header>
+                <p>
+                    Be sure to have your pages set up with the latest design and development standards. That means using an HTML5 doctype and including a viewport meta tag for proper responsive behaviors. Put it all together and your pages should look like this:
+                </p>
+            </section>
+            <hr class="hr3">
+            <section class="main-section" id="community">
+                <header>
+                    Community
+                </header>
+                <p>
+                    Stay up to date on the development of Bootstrap and reach out to the community with these helpful resources.
+                </p>
+                <ul>
+                    <li>Read and subscribe to The Official Bootstrap Blog.</li>
+                    <li>Join the official Slack room.</li>
+                    <li>Chat with fellow Bootstrappers in IRC. On the irc.freenode.net server, in the ##bootstrap channel.</li>
+                    <li>Implementation help may be found at Stack Overflow (tagged bootstrap-5). </li>
+                    <li>Developers should use the keyword bootstrap on packages that modify or add to the functionality of Bootstrap when distributing through npm or similar delivery mechanisms for maximum discoverability.</li>
+                </ul>
+            </section>
+        </main>
+    </div>
 </body>
 
 </html>
